infra/cilium/hubble.yaml
# Hubble UI 서비스
apiVersion: v1
kind: Service
metadata:
  name: hubble-ui
  namespace: kube-system
  labels:
    app: hubble-ui
data: {}
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8081
  selector:
    k8s-app: hubble-ui
